@@ -73,12 +73,7 @@ if (6) {
 }
 
 SKIP: {
-	skip("need v2.0.0+", 2) unless cvVersion() >= 2.000000;
-	Cv->setErrMode(1);
-	my $can_hook = Cv->getErrMode() == 1;
-	$can_hook = 0 if $^O eq 'cygwin';
-	Cv->setErrMode(0);
-	skip("can't hook cv:error", 2) unless $can_hook;
+	skip("can't hook error (cygwin)", 2) if $^O eq 'cygwin';
 
 	if (0) {
 		my $src = Cv::Mat->new([240, 320], CV_8UC3);
